[tool.poetry]
name = "easyocr"
version = "1.6.2"
description = "End-to-End Multi-Lingual Optical Character Recognition (OCR) Solution"
license="Apache-2.0"
authors = ["Rakpong Kittinaradorn <r.kittinaradorn@gmail.com>"]
readme = "README.md"
repository="https://github.com/jaidedai/easyocr"
packages = [{include = "easyocr"}]
keywords=['ocr', 'optical', 'character', 'recognition', 'deep', 'learning', 'neural', 'network']
classifiers=[
    'Development Status :: 5 - Production/Stable'
]

[[tool.poetry.source]]
name = "torch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.dependencies]
python=">3.8"
scipy="^1.8.0"
numpy="^1.23.0"
Pillow="^9.5.0"
scikit-image="^0.19.0"
python-bidi="^0.4.2"
PyYAML="^6.0"
Shapely="^2.0.1"
pyclipper="1.3.0.post4"
ninja="^1.11.1"


#=============================================================
#                    Torch dependencies
#=============================================================

[tool.poetry.group.torch_cpu]
optional = true

[tool.poetry.group.torch_cpu.dependencies]
torch = { version = "^2.0.0", source = "torch_cpu" }
torchvision = { version = "^0.15.0", source = "torch_cpu" }

[tool.poetry.group.torch]
optional = true

[tool.poetry.group.torch.dependencies]
torch = "^2.0.0"
torchvision = "^0.15.0"

#=============================================================
#                    CV2 dependencies
#=============================================================

[tool.poetry.group.cv2]
optional = true

[tool.poetry.group.cv2.dependencies]
opencv-python = "^4.7.0.72"

[tool.poetry.group.cv2_headless]
optional = true

[tool.poetry.group.cv2_headless.dependencies]
opencv-python-headless = "^4.7.0.72"

[tool.poetry.group.cv2_contrib]
optional = true

[tool.poetry.group.cv2_contrib.dependencies]
opencv-contrib-python = "^4.7.0.72"

[tool.poetry.group.cv2_contrib_headless]
optional = true

[tool.poetry.group.cv2_contrib_headless.dependencies]
opencv-contrib-python-headless = "^4.7.0.72"

[tool.poetry.scripts]
easyocr = "easyocr.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
